# seplis

./: .babelrc  .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  seplis.sublime-project  seplis.sublime-workspace  setup.py  static  tsconfig.json  webpack.config.js
.github/workflows/: _docker-build.yml  build-api.yml  build-ui.yml  build.yml
docker-dev/: docker-compose.yml
docker-dev/es_config/: elasticsearch.yml
docker-dev/seplis/: Caddyfile  compose.yml  docker-compose.yml
examples/: create_shows_on_test_from_user.py  imdbindextotvrage.py  imdbtothetvdb.py  import_all_tvmaze.py  import_themoviedb.py  lookup_tvmaze_from_imdb.py  oldseplisimport.py  show.py  updateallshows.py  updateimageindex.py
scripts/: release
seplis/: __init__.py  config.py  dev_server.py  io_sighandler.py  logger.py  runner.py
seplis-ui/: .dockerignore  .env.example  Dockerfile  cast-receiver.html  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
seplis-ui/src/: api.tsx  cast-receiver-main.tsx  index.css  main.tsx  queryclient.tsx  router.tsx  styles.tsx  theme.css  theme.ts
seplis/api/: alembic.ini  app.py  conftest.py  connections.py  constants.py  contexts.py  database.py  decorators.py  dependencies.py  elasticcreate.py  exceptions.py  main.py  rebuild_cache.py  schemas.py  send_email.py  testbase.py
seplis/importer/: __init__.py  (+2 more)
tests/: __init__.py  run_test.py  test_models.py  test_utils.py
(+1553 files in other folders)
