[project]
name = "seplis"
version = "2.0"
requires-python = ">=3.14"
description = ""
dependencies = [
    "PyMySQL>=1.1.1",
    "PyYAML>=6.0.1",
    "sqlalchemy[asyncio]>=2.0.20",
    "alembic>=1.11.3",
    "elasticsearch[async]>=8.9.0,<9.0.0",
    "passlib>=1.7.4",
    "sentry-sdk>=1.29.2",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "click>=8.1.7",
    "aiosmtplib>=2.0.2",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.12.0",
    "aiomysql>=0.2.0",
    "orjson>=3.9.5",
    "python-dateutil>=2.8.2",
    "aiofile>=3.8.8",
    "fastapi>=0.109.1",
    "uvicorn>=0.23.2",
    "jinja2>=3.1.2",
    "arq>=0.25.0",
    "httpx>=0.24.1",
    "python-multipart>=0.0.7",
    "email-validator>=2.0.0.post2",
    "uuid6>=2023.5.2",
    "aiorun>=2023.7.2",
    "aiosqlite>=0.19.0",
    "pyjwt>=2.8.0",
    "respx>=0.20.2",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
    "pytest-httpx>=0.36.0",
    "pytest>=9.0.2",
    "freezegun>=1.2.2",
    "ruff>=0.15.8",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=3.12,<4"]

[tool.ruff]
line-length = 90

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "FAST", "ANN", "RET"]
ignore = ['ANN401']

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
